2001-07-13  Marius Vollmer  <mvo@zagadka.ping.de>

	* safe-r5rs.scm: Use `re-export' instead of `export' for
	re-exported core bindings.  Do not re-export `numerator',
	`denominator' and `rationalize' since Guile does not have them.
	Continue to use `export' for `null-environment'.

	* null.scm: Use `re-export' instead of `export' for re-exported
	core bindings.  Do not export `unquote' and `unquote-splicing'
	since there aren't definitions for them.

	* boot-9.scm (compile-interface-spec): Bug fix: the keyword
	argument is "renamer" not "rename".

2001-07-09  Rob Browning  <rlb@defaultvalue.org>

	* boot-9.scm: Fixed the sense of the error message when read-eval?
	is #f.  Thanks to Matthias for catching this.

2001-07-06  Rob Browning  <rlb@defaultvalue.org>

	* boot-9.scm: added fix suggested by Matthias for #. read
	extension -- now only works if read-eval? is not #f.

2001-06-30  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* arrays.scm:  Don't install a read-hash-extension for 'b':  #b
	is already defined by R5RS.  Further, there is already a working
	read syntax for bitvectors, starting with #*.

2001-06-30  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* Makefile.am (ice9_sources): Removed tags.scm.

	* tags.scm: Removed file.

2001-06-29  Neil Jerram  <neil@ossau.uklinux.net>

	Changes to support tracing other than inside the repl-stack that
	is set up by the REPL code in boot-9.scm.
	
	* debug.scm (trace-entry, trace-exit): Conditionalize tracing on
	whether the current stack id is in `traced-stack-ids'.
	(traced-stack-ids, trace-all-stacks?, trace-stack, untrace-stack):
	New.

2001-06-27  Marius Vollmer  <mvo@zagadka.ping.de>

	* common-list.scm (member-if): Put in docstring for member-if, it
	was a cut-n-paste error previously.

2001-06-26  Neil Jerram  <neil@ossau.uklinux.net>

	* debug.scm (trace): Set evaluator trap options to handle tracing.
	Don't reset trace-level to 0.
	
	* boot-9.scm (lazy-handler-dispatch): Remove enter-frame-handler,